8242082: Shenandoah: Purge Traversal mode
Reviewed-by: shade